# rp2-atarist-rpikb-booster

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  README.md  build.sh  merge_uf2.py
.github/workflows/: release.yml
booster/: build.sh
booster/src/: CMakeLists.txt  btloop.c  btstack_config.h  fsdata_srv.c  gconfig.c  lwipopts.h  main.c  mbedtls_config.h  memmap_booster.ld  memmap_booster_rp2350.ld  mngr.c  mngr_httpd.c  network.c  sdkconfig.h  version.c
booster/src/dhcpserver/: dhcpserver.c  dhcpserver.h
booster/src/fs/: 404.html  index.html  mngr_bt.shtml  mngr_btpair.shtml  mngr_home.shtml  mngr_native.shtml  mngr_usb.shtml  mngr_wifi.shtml  styles.css
booster/src/include/: btloop.h  constants.h  gconfig.h  mngr.h  mngr_httpd.h  network.h  version.h
placeholder/: build.sh
placeholder/src/: CMakeLists.txt  main.c  memmap_rp2-ikbd_default.ld  memmap_rp2-ikbd_rp2350.ld
placeholder/src/include/: constants.h
